# rust-vulkan-renderer

./: Cargo.toml  readme.md
assets/shader/standard/: frag.glsl  shader.asset  test.asset  vert.glsl
rvr/: Cargo.toml
rvr-assets/: Cargo.toml
rvr-assets/src/: asset_index.rs  asset_type.rs  format.rs  lib.rs
rvr-assets/src/shader/: mod.rs
rvr-standalone/: Cargo.toml
rvr-standalone/src/: main.rs
rvr/src/: application.rs  catch.rs  context.rs  error.rs  lib.rs  runtime.rs
rvr/src/assets/: api.rs  asset_manager.rs  error.rs  index.rs  loading_worker.rs  mod.rs
rvr/src/collections/: mod.rs
rvr/src/graphics/: configuration.rs  frame_resources.rs  graphics_error.rs  image_format.rs  image_layout.rs  image_type.rs  mod.rs  renderer.rs  resources.rs  sample_count.rs  transfer_device.rs
rvr/src/graphics/rendergraph/: execute_context.rs  executor.rs  graph.rs  graph_builder.rs  mod.rs  pass.rs  pass_builder.rs  schedule.rs  schedule_builder.rs
rvr/src/graphics/rendergraph/images/: image_description.rs  image_handle.rs  image_resource.rs  mod.rs
rvr/src/graphics/rendergraph/render_targets/: mod.rs  render_target_description.rs  render_target_handle.rs  render_target_resource.rs
rvr/src/graphics/vulkan/: command_buffer.rs  command_pool.rs  debugger.rs  device.rs  device_profile.rs  extensions.rs  fence.rs  fence_pool.rs  layers.rs  mod.rs  pipeline.rs  queue.rs  render_pass.rs  semaphore.rs  semaphore_pool.rs  surface.rs  swapchain.rs
rvr/src/platform/: window.rs
rvr/src/threading/: worker.rs
rvr/src/util/: directed_graph.rs  id_generator.rs  mod.rs
rvrc/: Cargo.toml  readme.md
rvrc/src/: bundle_builder.rs  command.rs  dependency_graph.rs  error.rs  main.rs  workspace.rs
rvrc/src/assets/: asset.rs  asset_info.rs  asset_type.rs  mod.rs
rvrc/src/builder/: build_context.rs  mod.rs
rvrc/src/builder/shader/: attributes.rs  compile.rs  compile_error.rs  descriptors.rs  mod.rs  reflect.rs  reflect_error.rs
rvrc/src/tasks/: task.rs
