[package]
name = "rvr"
version = "0.1.0"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
msgbox = "0.5"
sdl2 = { version = "0.34", features = ["static-link", "bundled", "raw-window-handle"] }
raw-window-handle = "0.3"
ash = "0.31"
vk-mem = "0.2"
logos = "0.11"
colour = "0.5"
