[package]
name = "rvrc"
version = "0.1.0"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvr-assets = { path = "../rvr-assets" }
structopt = "0.3"
thiserror = "1.0"
anyhow = "1.0"
ignore = "0.4"
notify = "4.0"
memmap = "0.7"
blake3 = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
petgraph = "0.5"
tinypath = { git = "https://github.com/Vengarioth/tinypath.git", rev = "7fdcc7da504c065feb6cffb066a09c56d05f7561" }
colored = "1.9"
shaderc = "0.6"
spirv-reflect = "0.2"
bincode = "1.3"
